--- a/index.css
+++ b/index.css
@@ -1,11 +1,50 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+* a{
+    text-decoration: none;
 }
 body{
-    font-family: 'Courier New', Courier, monospace;
-    color: #000;
-    background-color: antiquewhite;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: #000;
+  background-color: #fff;
+  padding: 0 60px;
+}
+nav{
+  padding: 20px 0;
+  display: flex;
+  justify-content: space-between;
+  vertical-align: middle;
+  
+}
+.nav__left h1{
+  color: #a58828;
+  font-size: 40px;
+}
+.nav__right a{
+  color: #a58828;
+  margin-right: 10px;
+}
+main{
+  display: flex;
+  justify-content: space-between;
+}
+.main__left{
+  width: 60%;
+}
+.main__right h2{
+
+}
+.exp h2, .edu h2, .main__right h2{
+  color: #a58828;
+  margin: 10px 0;
+}
+.main__right{
+  width: 40%;
+  padding-left: 20px;
+}
+h3, h4{
+  margin: 10px 0;
 }
